--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,167 @@
-.App {
-  text-align: center;
+a {
+    text-decoration: none !important;
+    color: inherit !important;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+/* Scroll bar */
+
+body::-webkit-scrollbar {
+    width: 5px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+body::-webkit-scrollbar-thumb {
+    background-color: darkgrey;
+    outline: 1px solid slategrey;
 }
 
-.App-link {
-  color: #61dafb;
+
+/* header styles */
+
+.header {
+    display: block;
+    text-align: center;
+    font-size: 30px;
+    margin: 10px 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cartitem {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 20px;
+    margin-bottom: 20px;
+}
+
+.cartItemImg {
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+}
+
+.cartItemDetail {
+    display: flex;
+    flex: 1;
+    padding: 0 20px;
+    flex-direction: column;
+}
+
+
+/* Home Page */
+
+.home {
+    display: flex;
+}
+
+.filters {
+    background-color: #343a40;
+    color: white;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    width: 20%;
+    margin: 10px;
+    height: 86vh;
+    position: sticky;
+    top: 70px;
+    border-radius: 40px;
+}
+
+.type-filter {
+    display: flex;
+    flex-flow: row wrap
+}
+
+.filters>span {
+    padding-bottom: 20px;
+}
+
+.title {
+    font-size: 30px;
+}
+
+.productContainer {
+    display: flex;
+    width: 78%;
+    padding: 20px;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.product-data {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.products {
+    width: 30%;
+    margin: 10px;
+}
+
+.products .title {
+    display: flex;
+    justify-content: space-between;
+}
+
+.products-pricing {
+    display: flex;
+    justify-content: space-between;
+}
+
+.summary {
+    width: 30%;
+}
+
+.cart-empty {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: xxx-large;
+    padding: 50px;
+    margin: 50px;
+}
+
+.emptyView-wrap {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.emptyView-wrap img {
+    max-width: 500px;
+    width: 100%;
+}
+
+
+/* Media Queries */
+
+@media (max-width: 771px) {
+    .filters {
+        width: 40%;
+        padding: 10px;
+        margin: 5px;
+    }
+    .filters>span {
+        font-size: 10px;
+    }
+    .title {
+        font-size: 18px !important;
+    }
+    .productContainer {
+        width: 58%;
+        padding: 0;
+    }
+    .search {
+        display: none !important;
+    }
+    .products {
+        width: 100%;
+    }
 }
