--- a/src/App.css
+++ b/src/App.css
@@ -82,7 +82,13 @@ body::-webkit-scrollbar-thumb {
 }
 
 .title {
-    font-size: 30px;
+    font-size: 20px;
+}
+
+.filter-top-section {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .productContainer {
